    * FIXES https://bugs.torproject.org/33647
    Fix broken link in the README and fix our Makefile's pylint target.

Changes in version 0.11.0 - 2020-07-08

    * FIXES https://bugs.torproject.org/31422
    Make BridgeDB report internal metrics, like the median number of users that
    bridges were handed out to.

    * FIXES https://bugs.torproject.org/34260
    Parse bridge blocking information from SQL database.

    * FIXES https://gitlab.torproject.org/tpo/anti-censorship/bridgedb/-/issues/40001
    Remove the --reload command line switch.  It doesn't actually do anything.

    * FIXES https://bugs.torproject.org/29184
    Add a new configuration option, BLACKLISTED_TOR_VERSIONS, which contains a
    list of Tor versions.  BridgeDB won't hand out bridges whose Tor version
    is present in this blacklist.

    * FIXES https://bugs.torproject.org/19774
    Add a favicon to BridgeDB's web UI.

Changes in version 0.10.1 - 2020-05-27

    * FIXES https://bugs.torproject.org/33945
    This patch fixes a bug that caused the email autoresponder to fail after
    a while.

    * FIXES https://bugs.torproject.org/34154
    Add new fields to the SQLite table BlockedBridges in preparation for taking
    into account OONI's bridge measurement results.

    * FIXES https://bugs.torproject.org/31528
    BridgeDB's UI uses a bunch of obscure "chatspeak" references in its UI.  One
    example is that it responds with "Uh oh, spaghettios!" if there are
    currently no bridges available.  While funny to some, this is difficult to
    translate and shouldn't be part of software that's used by an international
    audience.  This patch removes such references.

    * FIXES https://bugs.torproject.org/12802
    Add a script that sends a bridge request over email, and then checks if it
    received a response from BridgeDB.  We use this script as part of our nagios
    setup, so we notice when our autoresponder breaks.

    * FIXES https://bugs.torproject.org/17548