@@ -1,3 +1,7 @@
+    * FIXES https://gitlab.torproject.org/tpo/anti-censorship/bridgedb/-/issues/33835
+    If a user sends a multipart email to our autoresponder, we now only parse
+    the part that has a text/plain encoding.
+
     * FIXES https://bugs.torproject.org/33647
     Fix broken link in the README and fix our Makefile's pylint target.
 
